--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Chia-Ying Lin's Page
+title: ChiaYing Lin's Page
 email: chiayingl1993@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Hi! 
-  I am Chia-Ying Lin. 
+  I am ChiaYing Lin. 
   Welcome to my page.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
@@ -33,3 +33,4 @@ exclude:
   - Gemfile
   - Gemfile.lock
 github: [metadata]
+permalink: /blog/:year/:month/:day/:title
