--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: > # this means to ignore newlines until "baseurl:"
   I am ChiaYing Lin. 
   Welcome to my page.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://zeroplusone.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: zeroplusone6
 github_username:  zeroplueone
 
