--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,8 @@ github_username:  zeroplueone
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-cayman
+#theme: minima
 gems:
   - jekyll-feed
 exclude:
@@ -34,3 +35,6 @@ exclude:
   - Gemfile.lock
 github: [metadata]
 permalink: /blog/:year/:month/:day/:title
+
+# optional setting for cayman theme
+show_downloads: false
