--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github_username:  zeroplueone
 markdown: kramdown
 theme: jekyll-theme-cayman
 #theme: minima
-gems:
+plugins:
   - jekyll-feed
 exclude:
   - Gemfile
