--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: ChiaYing Lin's Page
-email: chiayingl1993@gmail.com
+email: chiayingl@imslab.csie.ncku.edu.tw
 description: > # this means to ignore newlines until "baseurl:"
   Welcome to my page.
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -24,6 +24,7 @@ github_username:  zeroplueone
 
 # Build settings
 markdown: kramdown
+# theme: jekyll-theme-hydejack
 theme: jekyll-theme-cayman
 #theme: minima
 plugins:
