add google analytics config

--- a/_config.yml
+++ b/_config.yml
@@ -106,3 +106,9 @@ comments:
   provider: "disqus"
   disqus:
     shortname: "zeroplusone"
+
+analytics:
+  provider: "google-gtag"
+  google:
+    tracking_id: "UA-101242712-1"
+    anonymize_ip: false # default
